# ur3_ws

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/ur_msgs/: Analog.h  Digital.h  IOStates.h  MasterboardDataMsg.h  RobotStateRTMsg.h  SetIORequest.h  SetIOResponse.h  SetPayloadRequest.h  SetPayloadResponse.h
devel/lib/pkgconfig/: ur3_moveit_config.pc  ur_bringup.pc  ur_description.pc  ur_driver.pc  ur_gazebo.pc  ur_kinematics.pc  ur_msgs.pc  ur_python.pc  ur_test.pc
devel/lib/python2.7/dist-packages/ur_driver/: __init__.py
devel/lib/ur_test/: add_collision_node  test_cli_node  test_collision_node  test_custom_node  test_home_node  test_joint_node  test_kinematic_node  test_random_node  test_tcp_node
devel/share/common-lisp/ros/ur_msgs/msg/: _package.lisp  ur_msgs-msg.asd
devel/share/ur3_moveit_config/cmake/: ur3_moveit_configConfig.cmake
devel/share/ur_bringup/cmake/: ur_bringupConfig.cmake
devel/share/ur_description/cmake/: ur_descriptionConfig.cmake
devel/share/ur_driver/cmake/: ur_driverConfig.cmake
devel/share/ur_gazebo/cmake/: ur_gazeboConfig.cmake
devel/share/ur_kinematics/cmake/: ur_kinematicsConfig.cmake
devel/share/ur_msgs/cmake/: ur_msgs-msg-paths.cmake  ur_msgsConfig.cmake
devel/share/ur_python/cmake/: ur_pythonConfig.cmake
devel/share/ur_test/cmake/: ur_testConfig.cmake
src/universal_robot/dashur_control/: CMakeLists.txt  package.xml
src/universal_robot/dashur_control/launch/: keyboard_teleop.launch
src/universal_robot/dashur_description/: CMakeLists.txt  CMakeLists.txt~  package.xml
src/universal_robot/dashur_description/launch/: view_mobile_robot.launch
src/universal_robot/dashur_description/urdf/: dashgo.xacro  dashgo_ur.xacro  dashgo_wheel.xacro  dashur.urdf  differential_wheeled_robot.gv  ur3.urdf.xacro  ur3_arm.xacro
src/universal_robot/dashur_gazebo/: CMakeLists.txt  package.xml
src/universal_robot/dashur_gazebo/launch/: amcl.launch  dashgo_robot.launch  dashgo_robot_xtion.launch  dashur_gazebo.launch  dashur_gazebo_full.launch
src/universal_robot/dashur_gazebo/launch/includes/: move_base.launch.xml
src/universal_robot/ur3_moveit_config/: .setup_assistant
src/universal_robot/ur3_moveit_config/launch/: .move_group.launch.swp  demo_xtion.launch  sensor_manager.launch.xml
src/universal_robot/ur_description/launch/: ur3_xtion.launch
src/universal_robot/ur_description/model/: ur_collision.sdf
src/universal_robot/ur_description/urdf/: test.xacro  ur3.urdf  ur3.urdf.xacro  ur3_robot.urdf.xacro  ur3_xtion.xacro
src/universal_robot/ur_description/urdf/sensors/: xtion_pro_live.urdf.xacro
src/universal_robot/ur_driver/: test_jon.py
src/universal_robot/ur_gazebo/launch/: ur3.launch
src/universal_robot/ur_python/: CMakeLists.txt  py_test.py  setup.py
src/universal_robot/ur_test/: CMakeLists.txt  package.xml
src/universal_robot/ur_test/scripts/: test_moveit.py
src/universal_robot/ur_test/src/: add_collision.cpp  cuda.cu  test_cuda.cpp  test_custom.cpp  test_home.cpp  test_joint.cpp
